Changes for 4.2.0alpha3

New features:

Bug fixes:
........S. [ZBX-15400] fixed possible crash in preprocessing manager when items with change/throttle preprocessing steps were not being monitored anymore (wiper)
..F....... [ZBX-13804] fixed generic popup form submission (miks)
........S. [ZBX-15313] fixed unit suffix support in calculated item expressions (kalimulin)
A......... [ZBX-15156] fixed undefined offset error in host screen with web item (talbergs)
A......... [ZBX-14980] fixed problem with filter by itemids and hostids in history.get (vasilijs, vmurzins)

--------------------------------------------------------------------------------
Changes for 4.2.0alpha2

New features:
A.F.....S. [ZBXNEXT-4724] added validation and throttling preprocessing rules, ability to discard values and set errors (agriscenko, wiper)
..F....... [ZBXNEXT-4876] moved global search page to MVC framework (talbergs)
...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)
..F....... [ZBXNEXT-4792] added column "Latest values" in Monitoring->Problems and Dashboard (ashubin, gcalenko, vasilijs)
..F....... [ZBX-15202] implemented widget pausing methods in dashboard; made graph widget paused when using selection box or opening a tooltip (miks)
..F....PS. [ZBXNEXT-2315] implemented content matching in web monitoring headers (talbergs, vso)

Bug fixes:
...G...... [ZBX-14624] fixed agent collector not releasing connection to missing/removed disk devices (Andris, yurii)
........S. [ZBX-15279] fixed handling of LLD processing errors that should have resulted in not supported LLD rule state (wiper)
..F....... [ZBX-14604] fixed displayng of the graph name on screens (miks)
..F....... [ZBXNEXT-4588] renamed 'display options' tab to 'displaying options'; fixed multiple layout issues, footnote in hint-box, field value handling, calculation of mouse position, multiple issues related with Y axis and problem styling (miks)